# NovaOS

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: basic_chat.py  computer_use.py  voice_mode.py
novaos/: __init__.py  cli.py  config.py
novaos/control/: __init__.py  keyboard.py  mouse.py  windows.py
novaos/core/: __init__.py  agent.py  planner.py  workflow.py
novaos/memory/: __init__.py  summarizer.py  vector.py
novaos/skills/: __init__.py  skill_browser.py  skill_files.py  skill_terminal.py
novaos/ui/: __init__.py  dashboard.py
novaos/vision/: __init__.py  screenshot.py  vlm.py
novaos/voice/: __init__.py  hotkey.py  stt.py  tts.py
scripts/: setup.sh
tests/: test_agent.py  test_memory.py  test_planner.py  test_skills.py
